Added more style changes and register login page

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -11,6 +11,7 @@
 @forward "../styles/DownloadStyles";
 @forward "../styles/FooterStyles";
 @forward "../styles/AboutStyles";
+@forward "../styles/LoginStyles/";
 @forward "../styles/ModelsStyles";
 @forward "../styles/TeamStyles";
 @forward "../styles/ContactStyles";
