--- a/client/src/styles/AboutStyles/_about.scss
+++ b/client/src/styles/AboutStyles/_about.scss
@@ -16,7 +16,7 @@ hero for all pages
     position: absolute;
     top: 0;
     right: 0;
-    background-color: rgba(255, 255, 255, 0.92);
+    background-color: rgba(255, 255, 255, 0.92);;
   }
 
   &__text {
@@ -28,6 +28,7 @@ hero for all pages
     height: 41rem;
     justify-content: center;
     color: $text-black;
+   
 
     h3 {
       font-size: 3.6rem;
@@ -175,15 +176,15 @@ hero for all pages
     padding: 1rem 0;
   }
 
-  &__overlay {
-    background-color: #2d2d2d;
-    opacity: 0.89;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
+  // &__overlay {
+  //   background-color: #2d2d2d;
+  //   opacity: 0.89;
+  //   width: 100%;
+  //   height: 100%;
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  // }
 }
 
 .text-content {
